# Procedural-Dungeon

./: .gitignore  AGENTS.md  CIVC_AUDIT_REPORT.md  PROMPT_EVOLUTION_EXPERIMENT.md  README.md  REFACTORING_REPORT.md  WORK_COMPLETION_REPORT.md
.github/workflows/: ci-cd.yml  ci.yml
.qwen/: settings.json  settings.json.orig
DeepDungeon/: CMakeLists.txt  README.md
DeepDungeon/.github/workflows/: ci.yml
DeepDungeon/include/: Entity.h  Game.h  InputHandler.h  Map.h  MonsterAI.h  Renderer.h
DeepDungeon/src/: CMakeLists.txt  Entity.cpp  Game.cpp  InputHandler.cpp  MonsterAI.cpp  Player.cpp  Renderer.cpp  main.cpp
DeepDungeon/tests/: CMakeLists.txt  test_entity.cpp  test_player.cpp
DeepDungeon/uml/: 01_UseCase_Diagram.plantuml  02_Class_Diagram.plantuml  03_Combat_Sequence_Diagram.plantuml  04_DFD_Level0.plantuml  05_DFD_Level1.plantuml  06_PAD_MapGenerate.plantuml  07_PAD_UpdateFOV.plantuml  08_PAD_UpdateMonsters.plantuml  09_PAD_AttackMonster.plantuml  10_PAD_AddExp.plantuml  11_PAD_PickupItem.plantuml  12_PAD_GameInit.plantuml  Sprint 2 启动 - MUD 架构解耦与重构规划.md  产品待办列表_ProductBacklog.md  可维护性五因素自评报告.md  架构审查与重构报告.md  详细设计说明书_DDS.md  需求规格说明书_SRS.md
api/: openapi.yaml
docker/: docker-compose.yml  nginx.conf
dungeon-server/: Dockerfile  TEST_PLAN.md  mvnw.cmd  pom.xml
dungeon-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
dungeon-web/src/: App.css  App.jsx
dungeon-web/src/api/: dungeonApi.js
dungeon-web/src/components/: ControlPanel.jsx  GameCanvas.jsx  GameOverModal.jsx  MessageLog.jsx  StartScreen.jsx  StatusPanel.jsx
(+33 files in other folders)
